# ai-ready-data-quality-command-center

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
architecture/: architecture.md  data-flow.md  star-story.md
config/: data_quality_rules.yaml  settings.yaml
data/raw/: injected_issue_manifest.json
docs/: business-problem.md  data-dictionary.md  demo-script.md  implementation-plan.md  linkedin-post.md  metrics.md  sample-outputs.md
src/: __init__.py
src/api/: main.py
src/common/: __init__.py  config.py  logging.py  paths.py
src/dashboard/: __init__.py  app.py
src/data_generation/: generate_synthetic_data.py
src/ingestion/: __init__.py  loaders.py
src/pipeline/: run_all.py
src/quality/: __init__.py  quarantine.py  rules.py  validators.py
src/scoring/: __init__.py  accuracy.py  ai_readiness.py  trust_score.py
src/transformation/: __init__.py  clean.py  models.py
tests/data_quality/: test_v02_quality_evidence.py  test_validators.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_generation.py  test_ingestion.py  test_scoring.py
