[project]
name = "ai-ready-data-quality-command-center"
version = "0.1.0"
description = "Synthetic enterprise data quality command center for AI-readiness scoring."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
